--- a/css/PersonalPageStyles.css
+++ b/css/PersonalPageStyles.css
@@ -5,27 +5,31 @@
 
 .Header{
     background-color: rgb(24, 0, 63);
+    top: 0px; 
+    left: 0px;
+    right: 0px;
     color: white;
     height: 100px ;
     line-height: 100px;
+    
 }
 
 .mainbody{
-    background-color:whitesmoke;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 .Footer{
-    height: 25px;
+    height: 20px;
     font-size: 10px;
-    padding-top: 15px;
+    padding-top: 0px;
     background-color: black;
     color: rgb(255, 255, 255);
-    line-height: 25px;
+    line-height: 20px;
     bottom: 0px;
-    left: 10px;
-    right: 5px;
+    left: 0px;
+    right: 0px;
     position: fixed;
+    opacity: 75%;
 
 }
 img{
@@ -54,4 +58,19 @@ nav a{
 
 nav a:hover { 
     background-color: #8d8d8d;
+}
+
+body{
+    background-color: rgb(174, 174, 174);
+}
+
+.Tableau{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: ;
+    
+    
+    
+    width: 75%;
 }
